# api/routes/activitiesRoutes/activitiesfiles.routes.js
@@ -2,11 +2,15 @@ import { Router } from "express";
 import { ActivitiesFilesController } from "../../controllers/ActivitiesController/activitiesFiles.controller.js";
 import { verifyToken } from "../../middlewares/auth.middleware.js";
 import { isAdmin } from "../../middlewares/isAdmin.middleware.js";
+import multer from 'multer';
+const upload = multer({ dest: 'uploads/' }); // carpeta temporal
 
 const activitiesFilesRouter = Router();
 
-activitiesFilesRouter.post('/:id/files',verifyToken,isAdmin,ActivitiesFilesController.postActivitiesFilesController);
+activitiesFilesRouter.post('/images/upload',verifyToken, isAdmin, upload.single('file'), ActivitiesFilesController.postFilesController);
 
-activitiesFilesRouter.get('/:id/files',verifyToken,isAdmin,ActivitiesFilesController.getActivitiesFilesController);
+activitiesFilesRouter.get('/images/files',verifyToken, isAdmin, ActivitiesFilesController.getFilesController);
+
+activitiesFilesRouter.delete('/images/delete',verifyToken, isAdmin, ActivitiesFilesController.deleteFilesController);
 
 export default activitiesFilesRouter;
